[gd_scene load_steps=11 format=3 uid="uid://dom7l5hw3eii5"]

[ext_resource type="Script" path="res://Scripts/ScreenManagement/ScreenLogic.gd" id="1_hpcja"]
[ext_resource type="Texture2D" uid="uid://bh6ef2hoft8cb" path="res://Art/UI/Textbox_QuarterSize.png" id="2_poh35"]
[ext_resource type="Script" path="res://Scripts/ScreenManagement/ConfirmationPopupController.gd" id="3_m15bs"]
[ext_resource type="Theme" uid="uid://cp1430xlncsx2" path="res://Art/UI/Themes/Fauna_2024_birthday_game_theme.tres" id="3_rg6pl"]
[ext_resource type="Script" path="res://Scripts/UI/UIButtonAnimations.gd" id="4_arch7"]
[ext_resource type="AnimationLibrary" uid="uid://dlrngmk2gejou" path="res://Animations/ButtonLift.res" id="4_n5gpj"]
[ext_resource type="PackedScene" uid="uid://cprkdpxp0xfsl" path="res://ScenePrefabs/static_button_capture.tscn" id="5_1g7vh"]
[ext_resource type="AnimationLibrary" uid="uid://bskceqjctxne2" path="res://Animations/PopupAnimations.res" id="5_e8du3"]

[sub_resource type="Animation" id="Animation_v4ssh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4btv"]
_data = {
"RESET": SubResource("Animation_v4ssh")
}

[node name="ConfirmationPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hpcja")
clearScreenStack = false

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Panel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 250)
texture = ExtResource("2_poh35")
patch_margin_left = 100
patch_margin_top = 125
patch_margin_right = 100
patch_margin_bottom = 125

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.0
offset_top = 20.0
offset_right = 109.0
offset_bottom = 145.0
grow_horizontal = 2
theme = ExtResource("3_rg6pl")
theme_override_font_sizes/font_size = 64
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Body" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -125.0
offset_right = 250.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_rg6pl")
theme_override_font_sizes/font_size = 32
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ConfirmButtonAnchor" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -170.0
offset_right = 263.0
offset_bottom = -50.0
grow_vertical = 0
theme = ExtResource("3_rg6pl")

[node name="ConfirmButton" type="Button" parent="Panel/ConfirmButtonAnchor"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 203.0
grow_vertical = 0
theme = ExtResource("3_rg6pl")
theme_override_font_sizes/font_size = 32
text = "Confirm"

[node name="UIButtonAnimations" type="AnimationPlayer" parent="Panel/ConfirmButtonAnchor/ConfirmButton"]
libraries = {
"": SubResource("AnimationLibrary_h4btv"),
"ButtonLift": ExtResource("4_n5gpj")
}
script = ExtResource("4_arch7")
onEnter = "ButtonLift/ButtonEnter"
onDown = "RESET"
onExit = "ButtonLift/ButtonExit"
keepDown = true

[node name="StaticButtonCapture" parent="Panel/ConfirmButtonAnchor/ConfirmButton" instance=ExtResource("5_1g7vh")]
layout_mode = 0
offset_left = -720.0
offset_top = -620.0
offset_right = -720.0
offset_bottom = -620.0

[node name="CancelButtonAnchor" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -170.0
offset_right = -60.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_rg6pl")

[node name="CancelButton" type="Button" parent="Panel/CancelButtonAnchor"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_rg6pl")
theme_override_font_sizes/font_size = 32
text = "Cancel"

[node name="UIButtonAnimations" type="AnimationPlayer" parent="Panel/CancelButtonAnchor/CancelButton"]
libraries = {
"": SubResource("AnimationLibrary_h4btv"),
"ButtonLift": ExtResource("4_n5gpj")
}
script = ExtResource("4_arch7")
onEnter = "ButtonLift/ButtonEnter"
onDown = "RESET"
onExit = "ButtonLift/ButtonExit"
keepDown = true

[node name="StaticButtonCapture" parent="Panel/CancelButtonAnchor/CancelButton" instance=ExtResource("5_1g7vh")]
layout_mode = 0

[node name="Controller" type="Control" parent="." node_paths=PackedStringArray("cancelButtonText", "myScreen", "titleText", "bodyText", "confirmButtonText", "animator")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_m15bs")
cancelButtonText = NodePath("../Panel/CancelButtonAnchor/CancelButton")
myScreen = NodePath("..")
titleText = NodePath("../Panel/Title")
bodyText = NodePath("../Panel/Body")
confirmButtonText = NodePath("../Panel/ConfirmButtonAnchor/ConfirmButton")
animator = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"PopupAnimations": ExtResource("5_e8du3")
}

[connection signal="ScreenEnter" from="." to="Controller" method="onScreenEnter"]
[connection signal="pressed" from="Panel/ConfirmButtonAnchor/ConfirmButton" to="Controller" method="onConfirm"]
[connection signal="pressed" from="Panel/CancelButtonAnchor/CancelButton" to="Controller" method="onCancel"]
